trunk/yanl/examples/t1/correct/apeluri_2.yanl
# O functie trebuie sa intoarca o valoare convertibila la tipul sau de return.

program dude;
function f(x:integer; y:boolean; z:char):integer
begin
 f := f(x+1, y, z);
end;

function g(x:integer):integer
begin
   g := x+1;
end;

function h(x:integer):integer
begin
   h := x-1;
end;

function t:real
begin
	  t:=2;
end;

function tt:real
begin
			tt:=f(1,false, 'a');
end;

begin
  writereal(readinteger); #promovare automata a parametrului
end.