trunk/yanl/examples/t1/fail/bad_array_index.yanl
# Indexul unui array trebuie sa fie integer.

program dude;
var a:array[20..50] of real;

function f(x:integer):integer
begin
 f:=x-1;
end;

function g(x:integer):integer
begin
 g:=x+1;
end;

function h(x:integer):real
begin
 h:=x+0.5;
end;

begin
	writestring("ok");
 a[h(f(g(f(g(20+f(20))))))] := 30;
end.